# Chatify

./: .editorconfig  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  COMMENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS_FEATURES.md  build-windows-package.ps1  chatify.db  clicord-server  client.py  client.py.bak  main.rs  requirements.txt  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh  run_tests.bat  run_tests.ps1  utils.py
.github/: dependabot.yml
.github/agents/: code-review-guard.agent.md  elite-fullstack-oracle.agent.md  professional-organizer.agent.md  release-engineer.agent.md
.github/workflows/: ci.yml  codeql.yml  release-security-report.yml  windows-release-package.yml
.opencode/agent/: apex-agent.md
backup-original/: client.rs  main.rs
discord-bot/: discord_bot.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMMANDS.md  DEMO.md  ENGINEERING_CASE_STUDY.md  PLUGIN_API.md  RECRUITER_REVIEW_GUIDE.md  RELEASE_CHECKLIST.md  SECURITY_NOTES.md  UNIQUE_ROADMAP.md
examples/plugins/: README.md  hello-plugin.cmd  hello-plugin.ps1
plugins/examples/: README.md
plugins/examples/hello-world/: manifest.json  slash-response.json
plugins/examples/message-linter/: manifest.json  message-hook-blocked.json
scripts/: assert-release-targets.ps1  demo-local.ps1  generate-security-report.ps1  release-targets.ps1  run-with-auto-clean.ps1
src/: client.rs  config.rs  crypto.rs  discord_bot.rs  error.rs  event_store_optimized.rs  launcher.rs  lib.rs  main.rs  metrics.rs  performance.rs  totp.rs
src/client/: Cargo.toml
src/client/src/: args.rs  handlers.rs  lib.rs  main.rs  media.rs  state.rs  ui.rs  voice.rs
src/notifications/: mod.rs
src/screen_share/: capture.rs  display.rs  encode.rs  mod.rs  webrtc.rs
src/server/: Cargo.toml
src/server/src/: args.rs  auth.rs  db.rs  handlers.rs  http.rs  lib.rs  main.rs  plugin_runtime.rs  protocol.rs  roles.rs  state.rs  tls.rs  validation.rs
src/ui/: animations.rs  ansi.rs  emoji.rs  markdown.rs  mod.rs  theme.rs
src/voice/: audio.rs  events.rs  mod.rs  relay.rs
tests/: client_command_harness.rs  message_contracts.rs
windows/: chatify-installer.iss
