[package]
name = "clicord-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
discord-bridge = ["dep:serenity"]

[[bin]]
name = "clicord-server"
path = "src/main.rs"

[[bin]]
name = "clicord-client"
path = "src/client.rs"

[[bin]]
name = "discord_bot"
path = "src/discord_bot.rs"
required-features = ["discord-bridge"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "5"
clap = { version = "=4.4.18", features = ["derive"] }
rand = "0.8"
chacha20poly1305 = "0.9"
once_cell = "1"
pbkdf2 = "0.12"
hmac = "0.12"
generic-array = "0.14"
crossterm = "0.27"
ratatui = "0.26"
chrono = "0.4"
env_logger = "0.11"
rpassword = "7"
cpal = "0.14"
rodio = "0.18"
image = "0.24"
serenity = { version = "0.11", features = ["client", "gateway", "standard_framework", "model", "rustls_backend"], optional = true }
base64 = "0.21"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
