[package]
name = "clicord-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
discord-bridge = ["dep:serenity"]
bridge-client = []

[[bin]]
name = "clicord-server"
path = "src/main.rs"

[[bin]]
name = "clicord-client"
path = "src/client.rs"

[[bin]]
name = "discord_bot"
path = "src/discord_bot.rs"
required-features = ["discord-bridge"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "5"
clap = { version = "=4.4.18", features = ["derive"] }
rand = "0.8"
chacha20poly1305 = "0.9"
once_cell = "1"
pbkdf2 = "0.12"
hmac = "0.12"
generic-array = "0.14"
crossterm = "0.27"
ratatui = "0.26"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
rpassword = "7"
cpal = "0.14"
rodio = "0.18"
image = "0.24"
serenity = { version = "=0.11.7", features = ["client", "gateway", "standard_framework", "model", "rustls_backend"], optional = true }
base64 = "0.21"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
rustls = "0.22"
rustls-pemfile = "2"
tokio-rustls = "0.25"
subtle = "2.6"
zeroize = { version = "1.7", features = ["derive"] }
ring = "0.17"
rustls-webpki = "0.103"
toml = "0.8"
dirs = "5.0"
rustyline = "13.0"
pulldown-cmark = "0.9"
syntect = "5.1"
notify-rust = "4.10"
regex = "1.10"
bytes = "1"
lru = "0.8"
crabgrab = "0.4"
webrtc = "0.17"
flate2 = "1.0"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows-capture = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Keep local debugging useful while avoiding huge PDB/debuginfo output.
debug = 1
incremental = false
codegen-units = 16

[profile.dev.package."*"]
# Dependencies dominate artifact size; keep them lean in day-to-day builds.
debug = 0

[profile.test]
debug = 1
incremental = false

[profile.test.package."*"]
debug = 0
