[package]
name = "chatify-client"
version = "0.3.0"
edition = "2021"

[features]
default = []
bridge-client = []

[lib]
name = "chatify_client"
path = "src/lib.rs"

[[bin]]
name = "chatify-client"
path = "src/main.rs"

[dependencies]
chatify = { path = "../../" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
log = "0.4"
env_logger = "0.11"
prometheus = "0.14"
rpassword = "7"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "logging", "std", "tls12"] }
base64 = "0.22"
rand = "0.8.6"
bitflags = "2"
parking_lot = "0.12"
crossterm = "0.29"
ratatui = "0.30"
chrono = "0.4"
zeroize = "1.7"
cpal = "0.15"
rodio = "0.18"
image = "0.25.10"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
